Fix T45537: cycles bake crashes with motionblur on

The crash was due to baking with motion blur but without a camera.

Reviewed by Brecht.